fix header spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -101,7 +101,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
   font-size: 2rem;
-  margin-top: $large-spacing;
 }
 h2 {
   font-size: 1.75rem;
